crates/vize_canon/src/batch/type_checker/snapshots/vize_canon__batch__type_checker__tests__batch_type_checker_cross_file_vue_prop_error.snap
---
source: crates/vize_canon/src/batch/type_checker/tests.rs
assertion_line: 218
expression: snapshot
---
[
    (
        "src/Parent.vue",
        Some(
            2322,
        ),
        "6:18:error Type 'string' is not assignable to type 'number'.",
    ),
]
