crates/vize_canon/src/batch/type_checker/snapshots/vize_canon__batch__type_checker__tests__batch_type_checker_script_setup_type_error.snap
---
source: crates/vize_canon/src/batch/type_checker/tests.rs
expression: relevant
---
[
    (
        "declaration",
        "string",
    ),
    (
        "initializer",
        "0",
    ),
]
