crates/vize_canon/src/batch/type_checker/snapshots/vize_canon__batch__type_checker__tests__batch_type_checker_ts_imports_vue_component.snap
---
source: crates/vize_canon/src/batch/type_checker/tests.rs
assertion_line: 263
expression: snapshot
---
[
    (
        "src/main.ts",
        Some(
            2322,
        ),
        "6:3:error Type 'string' is not assignable to type 'number'.",
    ),
]
